--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/trilinos"]
 	path = external/trilinos
 	url = https://github.com/trilinos/Trilinos.git
+[submodule "external/AMGX"]
+	path = external/AMGX
+	url = https://github.com/NVIDIA/AMGX.git
