--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: prepare
+    - name: clone and checkout
       uses: actions/checkout@v3
 
     - name: create build
