smaller check freq + specify branches

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,4 +3,4 @@ updates:
   - package-ecosystem: "gitsubmodule" 
     directory: "/"  # Path to your `.gitmodules` file (use "/" if it's in the root)
     schedule:
-      interval: "daily"  # Options: "daily", "weekly", "monthly"
+      interval: "weekly"  # Options: "daily", "weekly", "monthly"
