--- a/.github/workflows/test-muelu-input-deck-ada.yml
+++ b/.github/workflows/test-muelu-input-deck-ada.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  test-muelu-input-deck:
+  test-muelu-input-deck-ada:
     runs-on: [self-hosted]
 
     steps:
@@ -18,6 +18,7 @@ jobs:
 
     - name: load modules
       run: |
+        module purge
         module load cuda/12.8.0
         export WRAPPER_PATH="${{ github.workspace }}/external/trilinos/packages/kokkos/bin/nvcc_wrapper"
         export OMPI_CXX=$WRAPPER_PATH
