Update and rename build-install-trilinos-amgx.yml to build-install-amgx.yml

--- a/.github/workflows/build-install-amgx.yml
+++ b/.github/workflows/build-install-amgx.yml
@@ -31,8 +31,7 @@ jobs:
     - name: configure AMGX 
       working-directory: external/AMGX
       run: |
-        mkdir build
-        cd build 
+        [ -d build ] && rm -rf build
         mkdir build && cd build
         cmake -DCUDA_ARCH="89" ..
           
