--- a/.github/workflows/unit-test-solver-market-csr-matrix.yml
+++ b/.github/workflows/unit-test-solver-market-csr-matrix.yml
@@ -1,4 +1,4 @@
-name: Unit Tests
+name: unit-test-solver-market-csr-matrix
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  unit-test-solver-market-csr-matrix:
     runs-on: ubuntu-latest
 
     steps:
