--- a/.github/workflows/build-AMGX-input-deck-ada.yml
+++ b/.github/workflows/build-AMGX-input-deck-ada.yml
@@ -5,14 +5,14 @@ on:
     branches: [ main ]
     paths:
       - 'external/AMGX/**'
-      - 'src/AMGX'
-      - 'src/solver-market'
+      - 'src/AMGX/**'
+      - 'src/solver-market/**'
 
   pull_request:
     branches: [ main ]
     paths:
       - 'external/AMGX/**'
-      - 'src/AMGX'
+      - 'src/AMGX/**'
       - 'src/solver-market'
 
   workflow_dispatch:  # allows manual triggering
