--- a/.github/workflows/build-AMGX-input-deck-ada.yml
+++ b/.github/workflows/build-AMGX-input-deck-ada.yml
@@ -13,7 +13,7 @@ on:
     paths:
       - 'external/AMGX/**'
       - 'src/AMGX/**'
-      - 'src/solver-market'
+      - 'src/solver-market/**'
 
   workflow_dispatch:  # allows manual triggering
 
