--- a/.github/workflows/build-AMGX-input-deck-ada.yml
+++ b/.github/workflows/build-AMGX-input-deck-ada.yml
@@ -17,10 +17,10 @@ on:
 
   workflow_dispatch:  # allows manual triggering
 
- # workflow_run: #ensure that if AMGX changes, the lib is built first
- #   workflows: ["build-install-AMGX-ada"]
- #   types:
- #     - completed
+  workflow_run: #ensure that if AMGX changes, the lib is built first
+    workflows: ["build-install-AMGX-ada"]
+    types:
+      - completed
 
 jobs:
   prepare-AMGX-input-deck:
@@ -34,8 +34,8 @@ jobs:
         module purge
         module load cuda/12.8.0
     - name: check triggering context
-        run: |
-          echo "Triggered by ${{ github.event_name }}"
+      run: |
+        echo "Triggered by ${{ github.event_name }}"
 
   configure-AMGX-input-deck:
     runs-on: [self-hosted, ada]
