--- a/.github/workflows/build-AMGX-input-deck-ada.yml
+++ b/.github/workflows/build-AMGX-input-deck-ada.yml
@@ -7,6 +7,7 @@ on:
       - 'external/AMGX/**'
       - 'src/AMGX/**'
       - 'src/solver-market/**'
+      - 'CMakeLists.txt'
 
   pull_request:
     branches: [ main ]
@@ -14,6 +15,8 @@ on:
       - 'external/AMGX/**'
       - 'src/AMGX/**'
       - 'src/solver-market/**'
+      - 'CMakeLists.txt'
+
 
   workflow_dispatch:  # allows manual triggering
 
