--- a/.github/workflows/unit-test-solver-market-csr-matrix.yml
+++ b/.github/workflows/unit-test-solver-market-csr-matrix.yml
@@ -3,9 +3,17 @@ name: unit-test-solver-market-csr-matrix
 on:
   push:
     branches: [ main ]
+    paths:
+     - 'src/solver-market/**'
+     - 'CMakeLists.txt'
+     - 'github/workflows/unit-test-solver-market-csr-matrix.yml
+
   pull_request:
     branches: [ main ]
-
+    paths:
+      - 'src/solver-market/**'
+      - 'CMakeLists.txt'
+      - 'github/workflows/unit-test-solver-market-csr-matrix.yml
 jobs:
   unit-test-solver-market-csr-matrix:
     runs-on: ubuntu-latest
