--- a/.github/workflows/build-AMGX-input-deck-ada.yml
+++ b/.github/workflows/build-AMGX-input-deck-ada.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main ]
     paths:
+      - 'github/workflows/build-AMGX-input-deck.yml'
       - 'external/AMGX/**'
       - 'src/AMGX/**'
       - 'src/solver-market/**'
@@ -12,6 +13,7 @@ on:
   pull_request:
     branches: [ main ]
     paths:
+      - 'github/workflows/build-AMGX-input-deck.yml'
       - 'external/AMGX/**'
       - 'src/AMGX/**'
       - 'src/solver-market/**'
