--- a/.github/workflows/build-muelu-input-deck-ada.yml
+++ b/.github/workflows/build-muelu-input-deck-ada.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main ]
     paths:
+      - 'github/workflows/build-muelu-input-deck.yml'
       - 'external/trilinos/**'
       - 'src/muelu/**'
       - 'src/solver-market/**'
@@ -12,6 +13,7 @@ on:
   pull_request:
     branches: [ main ]
     paths:
+      - 'github/workflows/build-muelu-input-deck.yml'
       - 'external/trilinos/**'
       - 'src/muelu/**'
       - 'src/solver-market/**'
@@ -48,7 +50,7 @@ jobs:
       run: |
         [ -d build-muelu-input-deck ] && rm -rf build-muelu-input-deck
         mkdir build-muelu-input-deck && cd build-muelu-input-deck
-        cmake .. -DBUILD_MUELU_INPUT_DECK=ON -DBUILD_muelu_INPUT_DECK=OFF -DBUILD_UNIT_TESTS=OFF
+        cmake .. -DBUILD_MUELU_INPUT_DECK=OFF -DBUILD_AMGX_INPUT_DECK=ON -DBUILD_UNIT_TESTS=OFF
         
   build-muelu-input-deck:
     runs-on: [self-hosted, ada]
