--- a/.github/workflows/build-muelu-input-deck-ada.yml
+++ b/.github/workflows/build-muelu-input-deck-ada.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'github/workflows/build-muelu-input-deck.yml'
+      - '.github/workflows/build-muelu-input-deck.yml'
       - 'external/trilinos/**'
       - 'src/muelu/**'
       - 'src/solver-market/**'
@@ -13,7 +13,7 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-      - 'github/workflows/build-muelu-input-deck.yml'
+      - '.github/workflows/build-muelu-input-deck.yml'
       - 'external/trilinos/**'
       - 'src/muelu/**'
       - 'src/solver-market/**'
