--- a/.github/workflows/build-test-AMGX-input-deck-ada.yml
+++ b/.github/workflows/build-test-AMGX-input-deck-ada.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '.github/workflows/build-test-AMGX-input-deck.yml'
+      - '.github/workflows/build-test-AMGX-input-deck-ada.yml'
       - 'external/AMGX/**'
       - 'src/AMGX/**'
       - 'src/solver-market/**'
@@ -13,7 +13,7 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-      - '.github/workflows/build-test-AMGX-input-deck.yml'
+      - '.github/workflows/build-test-AMGX-input-deck)ada.yml'
       - 'external/AMGX/**'
       - 'src/AMGX/**'
       - 'src/solver-market/**'
