cleaner cmake, only one kokkos

--- a/.github/workflows/unit-test-solver-market-reader.yml
+++ b/.github/workflows/unit-test-solver-market-reader.yml
@@ -46,8 +46,10 @@ jobs:
       run: |
         cmake \
         -D CMAKE_INSTALL_PREFIX=../install \
-        -D CMAKE_BUILD_TYPE=DEBUG \
         -D BUILD_SHARED_LIBS:BOOL=ON \
+        -D CMAKE_BUILD_TYPE=DEBUG \
+        -D Trilinos_ENABLE_Kokkos=ON \
+        -D Trilinos_ENABLE_KokkosCore=ON \
         -D Kokkos_ENABLE_DEBUG=ON \
         -D Kokkos_ENABLE_DEBUG_BOUNDS_CHECK=ON \
         ..
